--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"type": "module",
-	"main": "index.js",
+	"main": "src/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "pnpm tsc && node --env-file=.env dist/index.js"
@@ -22,6 +22,7 @@
 		"@types/node": "^22.13.4",
 		"discord-api-types": "^0.37.119",
 		"oxlint": "^0.15.11",
-		"typescript": "^5.7.3"
+		"typescript": "^5.7.3",
+		"wrangler": "^3.109.1"
 	}
 }
