--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -132,3 +133,4 @@ dist
 # Cloudflare
 wrangler.toml
 wrangler.jsonc
+worker-configuration.d.ts
