--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 	"main": "src/index.js",
 	"scripts": {
 		"dev": "wrangler dev",
+		"predeploy": "tsx --env-file=.env scripts/deploy-command.ts",
 		"deploy": "wrangler deploy --minify",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
+		"cf-typegen": "wrangler types --experimental-include-runtime=\"./runtime.d.ts\" --env-interface CloudflareBindings",
+		"register": "node --experimental-strip-types --env-file=.env scripts/deploy-command.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +23,7 @@
 		"@biomejs/biome": "1.9.4",
 		"discord-api-types": "^0.37.119",
 		"oxlint": "^0.15.11",
+		"tsx": "^4.19.2",
 		"typescript": "^5.7.3",
 		"wrangler": "^3.109.1"
 	}
