--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["dist", "runtime.d.ts"]
+		"ignore": ["dist", "*.d.ts"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -19,7 +19,10 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"style": {
+				"useNamingConvention": "error"
+			}
 		}
 	},
 	"javascript": {
