--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"outDir": "dist"
 	},
 	"include": ["**/*.ts", "**/*.tsx", "env.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "scripts/**"]
 }
