--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"main": "src/index.js",
 	"scripts": {
+		"prebuild": "pnpm cf-typegen",
 		"build": "tsc",
 		"dev": "wrangler dev",
 		"predeploy": "tsx --env-file=.env scripts/deploy-command.ts",
@@ -29,11 +30,6 @@
 	},
 	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
 	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@biomejs/biome",
-			"esbuild",
-			"sharp",
-			"workerd"
-		]
+		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "sharp", "workerd"]
 	}
 }
