fix: rename script "predeploy" to "register" to be able to run CI witout .env

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "wrangler dev",
-		"predeploy": "tsx --env-file=.env scripts/deploy-command.ts",
+		"register": "tsx --env-file=.env scripts/deploy-command.ts",
 		"deploy": "wrangler deploy --minify",
 		"cf-typegen": "wrangler types --experimental-include-runtime=\"./runtime.d.ts\" --env-interface CloudflareBindings"
 	},
