--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "wrangler dev",
+		"lint": "oxlint . && biome check --fix",
 		"register": "tsx --env-file=.dev.vars scripts/deploy-command.ts",
 		"deploy": "wrangler deploy --minify",
 		"cf-typegen": "wrangler types --experimental-include-runtime=\"./runtime.d.ts\" --env-interface CloudflareBindings"
