chore: reset  crontriger's frequency

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,7 @@
 		"dev": {}
 	},
 	"triggers": {
-		"crons": ["*/5 * * * *"]
+		"crons": ["30 * * * *"]
 	},
 	"kv_namespaces": [
 		// KVのネームスペースとIDは公開してもセキュリティ上問題ない
