fixup! chore: post reflection link at 9:00 PM JST

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,7 @@
 		"dev": {}
 	},
 	"triggers": {
-		"crons": ["0 12 * * *"]
+		"crons": ["0 12 * * *", "0 0 * * *"]
 	},
 	"kv_namespaces": [
 		// KVのネームスペースとIDは公開してもセキュリティ上問題ない
