--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"discord-api-types": "^0.37.119",
+		"lefthook": "^1.11.0",
 		"oxlint": "^0.15.11",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3",
@@ -30,6 +31,7 @@
 	},
 	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "sharp", "workerd"]
+		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "sharp", "workerd"],
+		"ignoredBuiltDependencies": ["lefthook"]
 	}
 }
