fixup! chore: add lefthook

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -20,7 +20,7 @@ pre-push:
 pre-commit:
   parallel: true
   jobs:
-    - run: pnpm biome --check {staged_files}
+    - run: pnpm biome check {staged_files}
       glob: "*.{js,ts,jsx,tsx}"
 
     - run: pnpm oxlint {staged_files}
