--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,21 +1,8 @@
-# EXAMPLE USAGE:
-#
 #   Refer for explanation to following link:
 #   https://lefthook.dev/configuration/
-#
 pre-push:
   jobs:
-    - name: packages audit
-      tags:
-        - frontend
-        - security
-      run: yarn audit
-
-    - name: gems audit
-      tags:
-        - backend
-        - security
-      run: bundle audit
+    - run: pnpm test
 
 pre-commit:
   parallel: true
