ci(lefthook): format json(c?) on commit

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -15,3 +15,6 @@ pre-commit:
 
     - run: pnpm tsc
       glob: "*.{js,ts,jsx,tsx}"
+
+    - run: pnpm biome format --fix {staged_files}
+      glob: "*.{json, jsonc}"
