--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: corepack enable pnpm && pnpm i
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
-      - run: pnpm test && pnpm lint
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.14.0
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
+
+
