--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,7 @@
 		"dev": {}
 	},
 	"triggers": {
-		"crons": ["0 12 */3 * *", "0 0 * * *"]
+		"crons": ["0 12 * * *", "0 0 */3 * *"]
 	},
 	"kv_namespaces": [
 		// KVのネームスペースとIDは公開してもセキュリティ上問題ない
