--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,9 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:best-practices"]
+	"extends": [
+		"config:best-practices",
+		"schedule:weekly",
+		"npm:unpublishSafe",
+		"helpers:pinGitHubActionDigestsToSemver"
+	]
 }
